test/netlist/error/write-input.bop
A(a, b) = c
where
  a = not(b);
  c = id(a);
end where;
